refactor(engine): remove unused state methods
* remove methods from event scope instance state that are only used in tests but not in production code
* these methods were used previously but are not needed anymore

(cherry picked from commit 17a66f611c7e6288e1b3ed0321fea82b1f0ae3be)